# speaker-toolkit

./: .env.example  .gitattributes  .gitignore  .tesslignore  CHANGELOG.md  README.md  pyproject.toml  tessl.json  tile.json
.github/: copilot-instructions.md  dependabot.yml
.tessl-plugin/: plugin.json
evals/: instructions.json  summary.json  summary_infeasible.json
rules/: deck-editing-rules.md  guardrail-rules.md  illustration-rules.md  interaction-rules.md  qr-generation-rules.md  resources-gathering-rules.md  shownotes-content-publish.md  slide-generation-rules.md  tessl-version-floating.md  thumbnail-generation-rules.md  title-overlay-rules.md  vault-language-policy.md
scripts/: check-tessl-pins.sh  stamp-changelog.py
tests/: conftest.py  test_apply_illustrations.py  test_backgrounds_manifest_to_spec.py  test_batch_download.py  test_build_expansion_manifest.py  test_build_expansion_to_packed.py  test_compute_pacing_adherence.py  test_content_only_gate.py  test_deck_driver_mirrors.py  test_delete_slides.py  test_export_pdf.py  test_extract_resources.py  test_extractors.py  test_flag_image_text_reprocess.py  test_generate_illustrations.py  test_generate_qr.py  test_generate_talk_timings.py  test_generate_thumbnail.py  test_guardrail_check.py  test_inject_speaker_notes.py  test_insert_placeholder.py  test_insert_qr_wrapper.py  test_model_registry.py  test_narrative_rhetorical.py  test_notes_to_packed.py  test_outline_schema.py  test_outline_source_is_yaml.py  test_persist_results.py  test_pptx_extraction.py  test_reorder_slides.py  test_stamp_changelog.py  (+7 more)
(+418 files in other folders)
